Update fr.json (#5003)
Minor translate change

--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -101,7 +101,7 @@
 	"character": "PERSONNAGE",
 	"class": "CLASSE",
 	"char-name-u": "NOM DU PERSONNAGE",
-	"class-level": "CLASSE/NIVEAU",
+	"class-level": "CLASSE / NIVEAU",
 	"race": "RACE",
 	"hp": "PV",
 	"theme": "THÈME",
@@ -120,10 +120,10 @@
 	"fort": "VIG",
 	"ref": "RÉF",
 	"will": "VOL",
-	"skills": "COMPÉTENCES",
-	"abi": "C.E.",
+	"skills": "COMP.",
+	"abi": "CAR.",
 	"spell": "SORT",
-	"poor": "PAUVRE",
+	"poor": "FAIBLE",
 	"good": "BON",
 	"menus": "MENUS",
 	"initiative": "INITIATIVE",
@@ -155,13 +155,13 @@
 	"eac": "CAE",
 	"kac": "CAC",
 	"cmd": "CMO",
-	"dr-resist": "RD/RÉSISTANCE",
+	"dr-resist": "RD / RÉSISTANCE",
 	"savingthrows": "JETS DE SAUVEGARDE",
 	"base": "BASE",
 	"rnk": "RNG",
 	"class-skill": "CC",
 	"acrobatics": "ACROBATIES",
-	"acp": "Compétence de classe",
+	"acp": "Pénalité d'armure",
 	"athletics": "ATHLÉTISME",
 	"bluff": "BLUFF",
 	"computers": "INFORMATIQUE",
@@ -182,15 +182,15 @@
 	"survival": "SURVIE",
 	"name-u": "NOM",
 	"lvl": "NIV",
-	"Not-Proficient": "PAS COMPÉTENT",
-	"proficient": "COMPÉTENT",
+	"Not-Proficient": "NON-FORMÉ",
+	"proficient": "FORMÉ",
 	"specialized": "SPÉCIALISÉ",
 	"category": "CATEGORIE",
 	"atk-u": "JET D'ATTAQUE",
 	"rng": "PORTÉE",
 	"melee": "MELÉE",
 	"ranged": "À DISTANCE",
-	"dmg": "JET DE DÉGÂTS",
+	"dmg": "DÉGÂTS",
 	"type": "TYPE",
 	"damage-type": "TYPE DE DÉGÂTS",
 	"crit-damage": "CRITIQUE",
@@ -213,7 +213,7 @@
 	"credits": "CRÉDITS",
 	"wealth": "RICHESSE",
 	"upbs": "BPUs",
-	"num": "NUM",
+	"num": "NB",
 	"bulk": "ENCOMBREMENT",
 	"cost": "COÛT",
 	"abilities": "COMPÉTENCES",
@@ -239,9 +239,9 @@
 	"ref-save": "JET DE RÉFLEXE",
 	"will-save": "JET DE VOLONTÉ",
 	"A-Sucessful-Save:": "Un jet réussi:",
-	"spellclasses": "JETEURS DE SORTS",
-	"ability": "CARACTÉRISTIQUE",
-	"progress": "PROGRÈS",
+	"spellclasses": "LANCEURS DE SORTS",
+	"ability": "CARAC.",
+	"progress": "PROGRESSION",
 	"spells-per-day": "SORTS PAR JOUR",
 	"1st-level": "1er NIVEAU",
 	"school": "ÉCOLE",
@@ -382,10 +382,10 @@
 	"long": "LONG",
 	"crit-effect": "EFFET CRITIQUE",
 	"ability_checks": "TEST CARACTÉRISTIQUE",
-	"ability_scores": "VALEUR CARACTÉRISTIQUE",
+	"ability_scores": "CARACTÉRISTIQUE",
 	"crb-equipment": "ÉQUIPEMENT DU LDB",
-	"dr_resist": "RD/RÉSISTANCE",
-	"caster-level_": "NIVEAU JETEUR DE SORT ",
+	"dr_resist": "RD / RÉSISTANCE",
+	"caster-level_": "NIVEAU LANCEUR DE SORT ",
 	"power": "ALIMENTATION",
 	"which-gunner": "Quel Cannonier",
 	"range": "PORTÉE",
@@ -445,22 +445,21 @@
 	"select range": "SÉLECTIONNER LA PORTÉE",
 	"dc-affected-by-buffs-to": "DD AFFECTÉ PAR UN BONUS POUR",
 	"character-info-help-first-line": "Cette section stocke toutes les informations de base sur votre personnage. La plupart de ces champs n’ont aucun effet sur la feuille elle-même, mais il y en a deux qui en ont :",
-	"character-info-help-second-line": "<b>classe/niveau :</b> est rempli par la feuille quand vous entrez votre(vos) classe(s) et niveau(x) dans l’onglet de la classe.",
-	"character-info-help-third-line": "<b>Race HP:</b> This is used by the sheet to calculate your hp and stores your racial starting hp.",
+	"character-info-help-second-line": "<b>Classe / niveau :</b> est rempli par la feuille quand vous entrez votre(vos) classe(s) et niveau(x) dans l’onglet de la classe.",
+	"character-info-help-third-line": "<b>PV Race :</b> Pour calculer vos PV et stoker la valeur de départ associée à votre race. ",
 	"class-info-help-first-line": "Cette section stocke toutes les informations de base sur votre(vos) classe(s). Les champs sont organisés dans les colonnes suivantes :",
-	"class-info-help-second-line": "<b>Nom :</b> le nom de la classe. C’est concaténé avec le niveau pour créer le champ classe/niveau dans l’écran de détails de personnage.",
-	"class-info-help-third-line": "<b>Level:</b> The level of this class. In addition to affecting the class/level field, this is used to calculate much of your character's info from health to skills",
-	"class-info-help-fourth-line": "<b>Stamina Points:</b> How many stamina points the class grants at each level.",
-	"class-info-help-fifth-line": "<b>Hit Points:</b> How many hit points the class grants at each level.",
-	"class-info-help-sixth-line": "<b>Base Attack Bonus Progression:</b> The progression of the class' BAB. 1/2 BAB classes will have a bab of 0 at level 1 and 10 at level 20. 3/4 BAB classes will have a bab of 0 at level 1 and 15 at level 20. Full BAB (or 1) will have a BAB equal to their level.",
-	"class-info-help-seventh-line": "<b>Fortitude/Reflex/Will Save Progressions:</b> The progression of the saves. There are two progressions: Good, which starts at 2, and Poor which starts at 0.",
-	"class-info-help-eighth-line": "<b>Skills/Level:</b> The number of skill points your class grants each level, not counting intelligence bonus",
-	"class-info-help-ninth-line": "<b>Key Ability:</b> The class' key ability score",
-	"class-info-help-tenth-line": "<b>Spells Checkbox:</b> Checked if the class casts spells",
-	"spellclass-info-help-first-line": "This section stores the details of all your spellcasting classes. A panel is created for each class that casts spells, and each panel has the following editable fields:",
-	"spellclass-info-help-second-line": "<b>Casting Ability:</b> The ability used to cast spells.",
-	"spellclass-info-help-third-line": "<b>Spell Progression:</b> How quickly the class gains new spell levels. Technomancer and Mystic are partial spell casters. Other progressions are included to support importing pathfinder classes.",
-	"spellclass-info-help-fourth-line": "<b>Spells/Day:</b> There is a current and a maximum for each spell level. These are displayed as different spell levels are gained.",
+	"class-info-help-second-line": "<b>Classe :</b> le nom de la classe. C’est concaténé avec le niveau pour créer le champ classe/niveau dans l’écran de détails de personnage.",
+	"class-info-help-third-line": "<b>NIV :</b> le niveau de cette classe. Sert à calculer les information de votre personnages tel que ses PV ou ses points de Compétences. ",
+	"class-info-help-fourth-line": "<b>PE :</b> Nombre de points d'Endurance gagnés à chaque niveau de cette classe.",
+	"class-info-help-fifth-line": "<b>PV :</b> Nombre de points de Vie gagnés à chaque niveau de cette classe.",
+	"class-info-help-sixth-line": "<b>BBA (Bonus de Base à l'Attaque) :</b> La progression du BBA de cette classe. Les classes avec un 1/2 BBA ont une valeur de 0 au niveau 1 et de 10 au niveau 20. Celles avec un 3/4 BAB ont une valeur de 0 au niveau 1 et de 15 au niveau 20. Enfin, celle avec un BBA de 1 ont une valeur égale à leur niveau.",
+	"class-info-help-seventh-line": "<b>REF / VIG / VOL :</b> La progression des jets de sauvegarde de cette classe. Il y a deux niveaux de progression : BON, qui commence à 2 et fini à 12 et FAIBLE, qui commence à 0 et fini à 6. ",
+	"class-info-help-eighth-line": "<b>COMP : </b> Le nombre de points de Compétences gagné à chaque niveau (sans y inclure votre mod. d'INT).",
+	"class-info-help-ninth-line": "<b>CAR. :</b> La Caractéristique associée à votre classe.",
+	"class-info-help-tenth-line": "<b>SORT :</b> Cochez cette case si votre classe est un LANCEUR DE SORTS.",
+	"spellclass-info-help-second-line": "<b>CARAC. :</b> La Caractéristique utilisée pour lancer les sorts.",	
+	"spellclass-info-help-third-line": "<b>PROGRESSION :</b> La vitesse à laquelle la classe gagne ses sorts.",	
+	"spellclass-info-help-fourth-line": "<b>SORTS PAR JOUR:</b> Le nombre de sorts par jour et par niveau.",
 	"mods-help-first-line": "This textarea is used to enter buffs, penalties, and other modifications to the sheet. Full details can be found on the sheet's wiki page, but the basic syntax is given here:",
 	"mods-help-second-line DO NOT TRANSLATE attack OR damage": "<b>+X BonusType to target</b> BonusType is optional and can be any word (letters and spaces). Target is the name of the attribute you want to modify. Underscores in the name can be replaced with spaces. You may also use the keywords attack and damage to affect all attack and damage attributes of attacks, spells, and abilities.",
 	"armor-help-third-line": "<b>Entering Armor Mods:</b> The mods syntax can handle eac and kac bonuses, armor check penalty, and maximum dexterity bonuses:",
