--- a/Cypher Systems by Roll20/translations/es.json
+++ b/Cypher Systems by Roll20/translations/es.json
@@ -206,40 +206,40 @@
     "The Strange": "The Strange",
     "gnlsettings_sheet_style-info": "Elige un juego/tema para nuevos personajes. La opción NPC (PNJ) establece los nuevos personajes por defecto con la hoja de tipo PNJ. Es útil si los personajes jugadores ya han sido creados y todas las nuevas hojas de personajes añadidas al juego probablemente no representarán a ninguno de ellos.",
     "gnlsettings_sheet_background": "Selecciona el tipo de fondo para las nuevas hojas de PJ.",
-    "gnlsettings_sheet_rolls-info": "Tirar usando los parámetros de la sección Acción o usando consultas de tirada para los parámetros."
-    , "tier-1-adv-1": "Tier 1 Adv. #1"
-    , "tier-1-adv-2": "Tier 1 Adv. #2"
-    , "tier-1-adv-3": "Tier 1 Adv. #3"
-    , "tier-1-adv-4": "Tier 1 Adv. #4"
-    , "tier-2-adv-1": "Tier 2 Adv. #1"
-    , "tier-2-adv-2": "Tier 2 Adv. #2"
-    , "tier-2-adv-3": "Tier 2 Adv. #3"
-    , "tier-2-adv-4": "Tier 2 Adv. #4"
-    , "tier-3-adv-1": "Tier 3 Adv. #1"
-    , "tier-3-adv-2": "Tier 3 Adv. #2"
-    , "tier-3-adv-3": "Tier 3 Adv. #3"
-    , "tier-3-adv-4": "Tier 3 Adv. #4"
-    , "tier-4-adv-1": "Tier 4 Adv. #1"
-    , "tier-4-adv-2": "Tier 4 Adv. #2"
-    , "tier-4-adv-3": "Tier 4 Adv. #3"
-    , "tier-4-adv-4": "Tier 4 Adv. #4"
-    , "tier-5-adv-1": "Tier 5 Adv. #1"
-    , "tier-5-adv-2": "Tier 5 Adv. #2"
-    , "tier-5-adv-3": "Tier 5 Adv. #3"
-    , "tier-5-adv-4": "Tier 5 Adv. #4"
-    , "tier-6-adv-1": "Tier 6 Adv. #1"
-    , "tier-6-adv-2": "Tier 6 Adv. #2"
-    , "tier-6-adv-3": "Tier 6 Adv. #3"
-    , "tier-6-adv-4": "Tier 6 Adv. #4"
-    , "might-abbreviation": "VI"
-    , "speed-abbreviation": "VE"
-    , "intellect-abbreviation": "I"
-    , "Action-abbreviation": "A"
-    , "Enabler-abbreviation": "C"
-    , "Other-abbreviation": "O"
-    , "inability-abbreviation": "I"
-    , "untrained-abbreviation": "S"
-    , "trained-abbreviation": "EN"
-    , "specialized-abbreviation": "ES"
-    , "used": "Usado"
+    "gnlsettings_sheet_rolls-info": "Tirar usando los parámetros de la sección Acción o usando consultas de tirada para los parámetros.",
+    "tier-1-adv-1": "Tier 1 Adv. #1",
+    "tier-1-adv-2": "Tier 1 Adv. #2",
+    "tier-1-adv-3": "Tier 1 Adv. #3",
+    "tier-1-adv-4": "Tier 1 Adv. #4",
+    "tier-2-adv-1": "Tier 2 Adv. #1",
+    "tier-2-adv-2": "Tier 2 Adv. #2",
+    "tier-2-adv-3": "Tier 2 Adv. #3",
+    "tier-2-adv-4": "Tier 2 Adv. #4",
+    "tier-3-adv-1": "Tier 3 Adv. #1",
+    "tier-3-adv-2": "Tier 3 Adv. #2",
+    "tier-3-adv-3": "Tier 3 Adv. #3",
+    "tier-3-adv-4": "Tier 3 Adv. #4",
+    "tier-4-adv-1": "Tier 4 Adv. #1",
+    "tier-4-adv-2": "Tier 4 Adv. #2",
+    "tier-4-adv-3": "Tier 4 Adv. #3",
+    "tier-4-adv-4": "Tier 4 Adv. #4",
+    "tier-5-adv-1": "Tier 5 Adv. #1",
+    "tier-5-adv-2": "Tier 5 Adv. #2",
+    "tier-5-adv-3": "Tier 5 Adv. #3",
+    "tier-5-adv-4": "Tier 5 Adv. #4",
+    "tier-6-adv-1": "Tier 6 Adv. #1",
+    "tier-6-adv-2": "Tier 6 Adv. #2",
+    "tier-6-adv-3": "Tier 6 Adv. #3",
+    "tier-6-adv-4": "Tier 6 Adv. #4",
+    "might-abbreviation": "VI",
+    "speed-abbreviation": "VE",
+    "intellect-abbreviation": "I",
+    "Action-abbreviation": "A",
+    "Enabler-abbreviation": "C",
+    "Other-abbreviation": "O",
+    "inability-abbreviation": "I",
+    "untrained-abbreviation": "S",
+    "trained-abbreviation": "EN",
+    "specialized-abbreviation": "ES",
+    "used": "Usado"
 }
