--- a/Cypher Systems by Roll20/translations/zu.json
+++ b/Cypher Systems by Roll20/translations/zu.json
@@ -206,5 +206,40 @@
     "The Strange": "crwdns88706:0crwdne88706:0",
     "gnlsettings_sheet_style-info": "crwdns88708:0crwdne88708:0",
     "gnlsettings_sheet_background": "crwdns88710:0crwdne88710:0",
-    "gnlsettings_sheet_rolls-info": "crwdns88712:0crwdne88712:0"
+    "gnlsettings_sheet_rolls-info": "crwdns88712:0crwdne88712:0",
+    "tier-1-adv-1": "crwdns95818:0crwdne95818:0",
+    "tier-1-adv-2": "crwdns95820:0crwdne95820:0",
+    "tier-1-adv-3": "crwdns95822:0crwdne95822:0",
+    "tier-1-adv-4": "crwdns95824:0crwdne95824:0",
+    "tier-2-adv-1": "crwdns95826:0crwdne95826:0",
+    "tier-2-adv-2": "crwdns95828:0crwdne95828:0",
+    "tier-2-adv-3": "crwdns95830:0crwdne95830:0",
+    "tier-2-adv-4": "crwdns95832:0crwdne95832:0",
+    "tier-3-adv-1": "crwdns95834:0crwdne95834:0",
+    "tier-3-adv-2": "crwdns95836:0crwdne95836:0",
+    "tier-3-adv-3": "crwdns95838:0crwdne95838:0",
+    "tier-3-adv-4": "crwdns95840:0crwdne95840:0",
+    "tier-4-adv-1": "crwdns95842:0crwdne95842:0",
+    "tier-4-adv-2": "crwdns95844:0crwdne95844:0",
+    "tier-4-adv-3": "crwdns95846:0crwdne95846:0",
+    "tier-4-adv-4": "crwdns95848:0crwdne95848:0",
+    "tier-5-adv-1": "crwdns95850:0crwdne95850:0",
+    "tier-5-adv-2": "crwdns95852:0crwdne95852:0",
+    "tier-5-adv-3": "crwdns95854:0crwdne95854:0",
+    "tier-5-adv-4": "crwdns95856:0crwdne95856:0",
+    "tier-6-adv-1": "crwdns95858:0crwdne95858:0",
+    "tier-6-adv-2": "crwdns95860:0crwdne95860:0",
+    "tier-6-adv-3": "crwdns95862:0crwdne95862:0",
+    "tier-6-adv-4": "crwdns95864:0crwdne95864:0",
+    "might-abbreviation": "crwdns95866:0crwdne95866:0",
+    "speed-abbreviation": "crwdns95868:0crwdne95868:0",
+    "intellect-abbreviation": "crwdns95870:0crwdne95870:0",
+    "Action-abbreviation": "crwdns95872:0crwdne95872:0",
+    "Enabler-abbreviation": "crwdns95874:0crwdne95874:0",
+    "Other-abbreviation": "crwdns95876:0crwdne95876:0",
+    "inability-abbreviation": "crwdns95878:0crwdne95878:0",
+    "untrained-abbreviation": "crwdns95880:0crwdne95880:0",
+    "trained-abbreviation": "crwdns95882:0crwdne95882:0",
+    "specialized-abbreviation": "crwdns95884:0crwdne95884:0",
+    "used": "crwdns95886:0crwdne95886:0"
 }
