--- a/SavageWorlds-Tabbed/translations/zu.json
+++ b/SavageWorlds-Tabbed/translations/zu.json
@@ -1012,5 +1012,29 @@
     "fatiguemod-bug": "crwdns95486:0crwdne95486:0",
     "vigor-failed-bug": "crwdns95488:0crwdne95488:0",
     "agility-roll-bug": "crwdns95490:0crwdne95490:0",
-    "occult-roll-bug": "crwdns95492:0crwdne95492:0"
+    "occult-roll-bug": "crwdns95492:0crwdne95492:0",
+    "injury-roll": "crwdns95770:0crwdne95770:0",
+    "use-gritty-damage": "crwdns95772:0crwdne95772:0",
+    "move-advances-to-journal-tab": "crwdns95774:0crwdne95774:0",
+    "running-text-before-number": "crwdns95776:0crwdne95776:0",
+    "running-text-after-number": "crwdns95778:0crwdne95778:0",
+    "pace-ignores-wounds": "crwdns95780:0crwdne95780:0",
+    "wild-card-icon-info": "crwdns95782:0crwdne95782:0",
+    "racial": "crwdns95784:0crwdne95784:0",
+    "robot-armor-wasn't-working": "crwdns95786:0crwdne95786:0",
+    "running-roll-output-wasnt-display-properly": "crwdns95788:0crwdne95788:0",
+    "wounds-werent-reducing-pace": "crwdns95790:0crwdne95790:0",
+    "support-for-gritty-damage": "crwdns95792:0crwdne95792:0",
+    "option-to-move-advancements-to-journal": "crwdns95794:0crwdne95794:0",
+    "setting-to-allow-pace-to-ignore-wounds": "crwdns95796:0crwdne95796:0",
+    "option-for-custom-wild-card-icon": "crwdns95798:0crwdne95798:0",
+    "statblock-output-button": "crwdns95800:0crwdne95800:0",
+    "gritty-damage-description": "crwdns95802:0crwdne95802:0",
+    "injury-table-description": "crwdns95804:0crwdne95804:0",
+    "known-issues": "crwdns95806:0crwdne95806:0",
+    "statblock-doesnt-support": "crwdns95808:0crwdne95808:0",
+    "spell-information": "crwdns95810:0crwdne95810:0",
+    "cybernetics-slash-augmentations": "crwdns95812:0crwdne95812:0",
+    "talismans-are-missing-from-sheet": "crwdns95814:0crwdne95814:0",
+    "derived-stats-not-using-sheet-workers": "crwdns95816:0crwdne95816:0"
 }
