--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -457,8 +457,9 @@
 	"class-info-help-eighth-line": "<b>COMP : </b> Le nombre de points de Compétences gagné à chaque niveau (sans y inclure votre mod. d'INT).",
 	"class-info-help-ninth-line": "<b>CAR. :</b> La Caractéristique associée à votre classe.",
 	"class-info-help-tenth-line": "<b>SORT :</b> Cochez cette case si votre classe est un LANCEUR DE SORTS.",
-	"spellclass-info-help-second-line": "<b>CARAC. :</b> La Caractéristique utilisée pour lancer les sorts.",	
-	"spellclass-info-help-third-line": "<b>PROGRESSION :</b> La vitesse à laquelle la classe gagne ses sorts.",	
+	"spellclass-info-help-first-line": "This section stores the details of all your spellcasting classes. A panel is created for each class that casts spells, and each panel has the following editable fields:",
+	"spellclass-info-help-second-line": "<b>CARAC. :</b> La Caractéristique utilisée pour lancer les sorts.",
+	"spellclass-info-help-third-line": "<b>PROGRESSION :</b> La vitesse à laquelle la classe gagne ses sorts.",
 	"spellclass-info-help-fourth-line": "<b>SORTS PAR JOUR:</b> Le nombre de sorts par jour et par niveau.",
 	"mods-help-first-line": "This textarea is used to enter buffs, penalties, and other modifications to the sheet. Full details can be found on the sheet's wiki page, but the basic syntax is given here:",
 	"mods-help-second-line DO NOT TRANSLATE attack OR damage": "<b>+X BonusType to target</b> BonusType is optional and can be any word (letters and spaces). Target is the name of the attribute you want to modify. Underscores in the name can be replaced with spaces. You may also use the keywords attack and damage to affect all attack and damage attributes of attacks, spells, and abilities.",
