--- a/Abstract Dungeon (FR base)/translations/en.json
+++ b/Abstract Dungeon (FR base)/translations/en.json
@@ -4,6 +4,7 @@
 	"level": "Level:",
 	"experience": "XP:",
 	"bonus": "Bonus:",
+	"game's name": "Nom du jeu",
 	"attributes'names": "Attributes Names",
 	"attributes' descriptions": "Description Texts",
 	"secondary pools' name": "Nom des réserves secondaires",
@@ -19,6 +20,8 @@
 	"result": "Result: ",
 	"uses": "uses",
 	"gets": "gets",
+	"Game's name :": "Nom du jeu",
+	"gameinfo": "Change le nom du jeu pour correspondre à votre style",
 	"attributeinfo": "Change les caractéristiques pour correspondre à votre type de jeu",
 	"First attribute :": "First attribute:",
 	"Second attribute :": "Seconde caractéristique :",
