--- a/Chronicles of Darkness by Roll20/translations/fr.json
+++ b/Chronicles of Darkness by Roll20/translations/fr.json
@@ -305,7 +305,8 @@
     "family-ties": "Liens familiaux",
     "lair-traits": "Caractéristiques du refuge",
     "copyright": "&copy;2015 CCP hf. Chronicles of Darkness, Vampire: the Requiem, Werewolf: the Foresaken, Mage: the Awakening, Promethean: the Created, Changeling: the Lost, Geist: the Sin Eaters, Mummy: the Cursed are trademarks of CCP hf, in the U.S.A. and other countries. All CCP hf characters and character names, and the distinctive likeness thereof, are trademarks of CCP hf.",
-"successes": "Succès",
+    "dice-pool":"Dicepool",
+    "successes": "Succès",
     "rolls": "lance",
     "dice-for": "dés pour",
     "power-stat": "Attribut de puissance",
@@ -317,4 +318,3 @@
     "makes-a": "attaque avec",
     "attack": "en lançant"
 }
-
