UC-384: translate 'Unarmed'

--- a/Chronicles of Darkness by Roll20/translations/fr.json
+++ b/Chronicles of Darkness by Roll20/translations/fr.json
@@ -316,5 +316,6 @@
     "and-misses-with": "et rate avec",
     "and-hits-for": "et touche avec",
     "makes-a": "attaque avec",
-    "attack": "en lançant"
+    "attack": "en lançant",
+    "unarmed":"Non armé"
 }
