UC-384: DiceRoller box translation finish

--- a/Chronicles of Darkness by Roll20/translations/fr.json
+++ b/Chronicles of Darkness by Roll20/translations/fr.json
@@ -317,5 +317,5 @@
     "and-hits-for": "et touche avec",
     "makes-a": "attaque avec",
     "attack": "en lançant",
-    "unarmed":"Non armé"
+    "unarmed":"Mains nues"
 }
