--- a/Pathfinder 2 Playtest by Roll20/translations/fr.json
+++ b/Pathfinder 2 Playtest by Roll20/translations/fr.json
@@ -102,7 +102,7 @@
 	"class": "CLASSE",
 	"char-name-u": "NOM DU PERSONNAGE",
 	"class-level": "CLASSE/NIVEAU",
-	"ancestry": "ANCÊTRES",
+	"ancestry": "RACE",
 	"hp": "PV",
 	"theme": "THÈME",
 	"size": "TAILLE",
@@ -113,7 +113,7 @@
 	"deity": "DÉITÉ",
 	"player": "JOUEUR",
 	"languages": "LANGUES",
-	"class-name": "NOM DE CLASSE",
+	"class-name": "CLASSE",
 	"class-num-level": "NIV",
 	"class-stam": "SP",
 	"bab": "BBA",
@@ -121,7 +121,7 @@
 	"ref": "RÉF",
 	"will": "VOL",
 	"skills": "COMPÉTENCES",
-	"abi": "ABI",
+	"abi": "CARAC.",
 	"spell": "SORT",
 	"poor": "PAUVRE",
 	"good": "BON",
@@ -137,9 +137,9 @@
 	"mods": "MODS",
 	"ability-scores": "VALEURS DES CARACTÉRISTIQUES",
 	"mod": "MOD",
-	"tot": "TOT",
+	"tot": "TOTAL",
 	"pen": "MALUS",
-	"drain": "DRN",
+	"drain": "DRAIN",
 	"strength": "FORCE",
 	"dexterity": "DEXTÉRITÉ",
 	"constitution": "CONSTITUTION",
@@ -148,14 +148,14 @@
 	"charisma": "CHARISME",
 	"health": "SANTÉ",
 	"char-hp": "POINTS DE VIE",
-	"sp": "SP",
-	"gp": "GP",
+	"sp": "PA",
+	"gp": "PO",
 	"pp": "PP",
-	"cp": "CP",
-	"rp": "RP",
+	"cp": "PC",
+	"rp": "PR",
 	"temp-hp": "POINTS DE VIE TEMPORAIRES",
 	"armorclass": "CLASSE D'ARMURE",
-	"tac": "TCA",
+	"tac": "CAC",
 	"ac": "CA",
 	"resistance": "RÉSISTANCE ",
 	"savingthrows": "JETS DE SAUVEGARDE",
@@ -163,17 +163,17 @@
 	"rnk": "RNG",
 	"class-skill": "CS",
 	"acrobatics": "ACROBATIES",
-	"acp": "ACP",
-	"untrained": "SANS FORMATION",
+	"acp": "PAT",
+	"untrained": "NON FORMÉ",
 	"trained": "ENTRAINÉ",
 	"expert": "EXPERT",
 	"master": "MAÎTRE",
-	"legendary": "LÉGENDAIRE",
+	"legendary": "LÉGENDE",
 	"athletics": "ATHLÉTISME",
 	"arcana": "ARCANES",
 	"diplomacy": "DIPLOMACIE",
-	"crafting": "CRAFTING",
-	"deception": "SUPERCHERIE",
+	"crafting": "ARTISANAT",
+	"deception": "BLUFF",
 	"intimidation": "INTIMIDATION",
 	"medicine": "MÉDECINE",
 	"perception": "PERCEPTION ",
@@ -183,7 +183,7 @@
 	"society": "SOCIÉTÉ",
 	"stealth": "FURTIVITÉ",
 	"survival": "SURVIE",
-	"thievery": "THIEVERY",
+	"thievery": "LARCIN",
 	"name-u": "NOM",
 	"lvl": "NIV",
 	"Not-Proficient": "PAS COMPÉTENT",
@@ -210,31 +210,31 @@
 	"attacher": "ATTACHER",
 	"equipment": "ÉQUIPEMENT",
 	"carried": "PORTÉ",
-	"encumber": "ENCUMBER",
-	"over": "OVER",
+	"encumber": "ENCUMBRÉ",
+	"over": "SURCHARGÉ",
 	"credits": "CREDITS",
 	"wealth": "WEALTH",
 	"upbs": "UPBs",
-	"num": "NUM",
-	"bulk": "BULK",
+	"num": "QT",
+	"bulk": "ENC.",
 	"cost": "COST",
 	"abilities": "ABILITIES",
-	"constant": "CONSTANT",
-	"at-will": "AT WILL",
-	"x/day": "X/DAY",
+	"constant": "PERMANENT",
+	"at-will": "À VOLONTÉ",
+	"x/day": "X/JOUR",
 	"source": "SOURCE",
-	"extraordinary": "EXTRAORDINARY",
-	"supernatural": "SUPERNATURAL",
+	"extraordinary": "EXTRAORDINAIRE",
+	"supernatural": "SUPERNATUREL",
 	"spell-like": "SPELL-LIKE",
 	"target": "CIBLE",
 	"duration": "DURÉE",
 	"_-daily-uses": "Daily Uses",
-	"atk": "ATTACK ROLL",
+	"atk": "JET D'ATTAQUE",
 	"save-effect": "SAVE EFFECT",
 	"dex": "DEX",
 	"con": "CON",
 	"int": "INT",
-	"wis": "WIS",
+	"wis": "SAG",
 	"cha": "CHA",
 	"based-dc_": "Based DC ",
 	"fort-save": "FORT SAVE",
@@ -310,7 +310,7 @@
 	"starship-defenses": "DEFENSES",
 	"total": "TOTAL",
 	"tl": "TL",
-	"current": "CURRENT",
+	"current": "ACTUEL",
 	"thresholds": "THRESHOLDS",
 	"critical": "CRITICAL",
 	"shield-total": "SHIELD TOTAL",
@@ -346,15 +346,15 @@
 	"stbd (2)": "STBD (2)",
 	"port (4)": "PORT (4)",
 	"aft (3)": "AFT (3)",
-	"1st-attack": "1st ATTACK",
+	"1st-attack": "1re ATTAQUE",
 	"targets": "TARGETS",
 	"full-effect:": "FULL EFFECT:",
-	"save": "SAVE",
-	"dc": "DC",
+	"save": "SVG",
+	"dc": "DD",
 	"save-effect:": "SAVE EFFECT:",
-	"notes:": "NOTES:",
-	"level": "LEVEL ",
-	"roll-crit": "ROLL CRITICAL EFFECT",
+	"notes:": "NOTES :",
+	"level": "NIVEAU",
+	"roll-crit": "APPLIQUER UN CRITIQUE",
 	"random-crit": "APPLY RANDOM CRITICAL EFFECT",
 	"2nd-attack": "2nd ATTACK",
 	"3rd-attack": "3rd ATTACK",
@@ -372,12 +372,12 @@
 	"arc": "ARC",
 	"bp": "BP",
 	"pcu": "PCU",
-	"short": "SHORT",
-	"medium": "MEDIUM",
-	"long": "LONG",
-	"crit-effect": "CRITICAL EFFECT",
+	"short": "COURTE",
+	"medium": "MOYENNE",
+	"long": "LONGUE",
+	"crit-effect": "CRITIQUE",
 	"ability_checks": "ABILITY CHECKS",
-	"ability_scores": "ABILITY SCORES",
+	"ability_scores": "CARACTÉRISTIQUES",
 	"dr_resist": "DR/RESIST",
 	"caster-level_": "CASTER LEVEL ",
 	"power": "POWER",
@@ -397,92 +397,92 @@
 	"shield-bonus": "SHIELD BONUS",
 	"shields": "SHIELDS",
 	"activation": "ACTIVATION",
-	"tiny": "TINY",
-	"small": "SMALL",
-	"large": "LARGE",
-	"huge": "HUGE",
-	"gargantuan": "GARGANTUAN",
-	"colossal": "COLOSSAL",
+	"tiny": "TRÈS PETITE",
+	"small": "PETITE",
+	"large": "GRANDE",
+	"huge": "TRÈS GRANDE",
+	"gargantuan": "GIGANTESQUE",
+	"colossal": "COLOSSALE",
 	"clumsy": "CLUMSY",
 	"average": "AVERAGE",
 	"perfect": "PERFECT",
 	"n/a": "NA",
 	"disclaimer": "© 2018. Pathfinder Playtest, the Pathfinder Playtest logo, the Paizo golem, all Paizo titles, the Pathfinder Playtest Roleplaying Game rules, and Paizo’s character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries.",
-	"unarmored": "UNARMORED",
-	"light-armor": "LIGHT ARMOR",
-	"medium-armor": "MEDIUM ARMOR",
-	"heavy-armor": "HEAVY ARMOR",
-	"shield": "SHIELD",
-	"simple": "SIMPLE",
-	"martial": "MARTIAL",
+	"unarmored": "SANS ARMURE",
+	"light-armor": "AR.LÉGÈRE",
+	"medium-armor": "AR.MOYENNE",
+	"heavy-armor": "AR.LOURDE",
+	"shield": "BOUCLIER",
+	"simple": "SIMPLES",
+	"martial": "MARTIALES",
 	"conditions": "CONDITIONS",
 	"combat-proficiencies": "WEAPON & ARMOR PROFICIENCIES",
-	"armor": "ARMOR",
-	"weapon": "WEAPON",
+	"armor": "ARMURE",
+	"weapon": "ARMES",
 	"armor-type": "ARMOR TYPE",
-	"ancestry-name": "ANCESTRY NAME",
-	"boost": "BOOST",
-	"flaw": "FLAW",
-	"level-1-boosts": "LEVEL 1 BOOSTS",
-	"level-5-boosts": "LEVEL 5 BOOSTS",
-	"level-10-boosts": "LEVEL 10 BOOSTS",
-	"level-15-boosts": "LEVEL 15 BOOSTS",
-	"level-20-boosts": "LEVEL 20 BOOSTS",
-	"background-name": "BACKGROUND NAME",
-	"background": "BACKGROUND",
-	"creation": "CREATION",
+	"ancestry-name": "RACE",
+	"boost": "BONUS",
+	"flaw": "MALUS",
+	"level-1-boosts": "AMÉLIORATION NIV 1",
+	"level-5-boosts": "AMÉLIORATION NIV 5",
+	"level-10-boosts": "AMÉLIORATION NIV 10",
+	"level-15-boosts": "AMÉLIORATION NIV 15",
+	"level-20-boosts": "AMÉLIORATION NIV 20",
+	"background-name": "HÉRITAGE",
+	"background": "HÉRITAGE",
+	"creation": "CRÉATION",
 	"common": "COMMON",
 	"uncommon": "UNCOMMON",
 	"potency-rune": "POTENCY RUNE",
 	"property-rune": "PROPERTY RUNE",
 	"addl-attack-penalty": "ADDITIONAL ATTACK PENALTY",
-	"atk1": "ATK1",
-	"atk2": "ATK2",
-	"atk3+": "ATK3+",
+	"atk1": "ATT1",
+	"atk2": "ATT2",
+	"atk3+": "ATT3+",
 	"dice-abbrv": "d",
-	"general feat": "GENERAL FEAT",
-	"skill feat": "SKILL FEAT",
-	"class feat": "CLASS FEAT",
+	"general feat": "DON GÉNÉRAL",
+	"skill feat": "DON DE COMPÉTENCE",
+	"class feat": "DON DE CLASSE",
 	"abjuration": "ABJURATION",
 	"conjuration": "CONJURATION",
 	"divination": "DIVINATION",
-	"enchantment": "ENCHANTMENT",
-	"evocation": "EVOCATION",
+	"enchantment": "ENCHANTEMENT",
+	"evocation": "ÉVOCATION",
 	"illusion": "ILLUSION",
-	"necromancy": "NECROMANCY",
+	"necromancy": "NÉCROMANCIE",
 	"transmutation": "TRANSMUTATION",
 	"traits": "TRAITS",
 	"feat type": "FEAT TYPE",
 	"spells": "SPELLS",
 	"class dc": "CLASS DC",
 	"spell dc": "SPELL DC",
-	"powers": "POWERS",
-	"proficiencies": "PROFICIENCIES",
-	"ancestry feat": "ANCESTRY FEAT",
-	"other senses": "OTHER SENSES",
+	"powers": "POUVOIRS",
+	"proficiencies": "MANIEMENTS",
+	"ancestry feat": "DON RACIAL",
+	"other senses": "AUTRES SENS",
 	"signature": "SIGNATURE",
-	"weakness": "WEAKNESS",
-	"prof": "PROF",
+	"weakness": "FAIBLESSE",
+	"prof": "RANG",
 	"standard": "STANDARD",
 	"magical traditions": "MAGICAL TRADITIONS",
-	"arcane": "ARCANE",
-	"divine": "DIVINE",
+	"arcane": "ARCANIQUE",
+	"divine": "DIVIN",
 	"primal": "PRIMAL",
-	"occult": "OCCULT",
-	"arcane spell": "ARCANE SPELL",
-	"divine spell": "DIVINE SPELL",
-	"primal spell": "PRIMAL SPELL",
-	"occult spell": "OCCULT SPELL",
-	"arcane power": "ARCANE POWER",
-	"divine power": "DIVINE POWER",
-	"primal power": "PRIMAL POWER",
-	"occult power": "OCCULT POWER",
-	"hero points": "HERO POINTS",
-	"spell points": "SPELL POINTS",
+	"occult": "OCCULTE",
+	"arcane spell": "SORT ARCANIQUE",
+	"divine spell": "SORT DIVIN",
+	"primal spell": "SORT PRIMAL",
+	"occult spell": "SORT OCCULTE",
+	"arcane power": "POUVOIR ARCANIQUE",
+	"divine power": "POUVOIR DIVIN",
+	"primal power": "POUVOIR PRIMAL",
+	"occult power": "POUVOIR OCCULTE",
+	"hero points": "POINTS HÉROÏQUE",
+	"spell points": "POINTS DE SORTS",
 	"other": "OTHER",
 	"spell tradition": "SPELL TRADITION",
 	"roll critical damage": "Roll Critical Damage",
-	"perform": "PERFORM",
+	"perform": "REPRÉSENTATION",
 	"defensive or reactionary abilities": "DEFENSIVE OR REACTIONARY ABILITIES",
 	"creature": "CREATURE",
 	"uncommon creature": "UNCOMMON CREATURE",
