--- a/D&D_3-5/translations/fr.json
+++ b/D&D_3-5/translations/fr.json
@@ -134,7 +134,7 @@
 	"range": "Distance",
 	"ammunition": "Munitions",
 	"attack-ability": "Capacité d'Attaque",
-	"damage-ability": "Damage Ability",
+	"damage-ability": "Capacité de dégât",
 	"special-properties": "Propriétés spéciales",
 	"strength-a": "For",
 	"dexterity-a": "Dex",
@@ -188,7 +188,7 @@
 	"current-deflection-bonus": "Bonus de déflexion actuel",
 	"miscellaneous-armor-class-i": "CA Divers",
 	"miscellaneous-armor-class-info": " Potential component of AC, Touch AC, FF or Immobilized AC. ",
-	"in-armor-class?-i": "In AC?",
+	"in-armor-class?-i": "Dans la CA?",
 	"in-immobilized-armor-class?-i": "In Immobl AC?",
 	"current-miscellaneous-armor-class-bonus": "Current Misc AC Bonus",
 	"encumbrance/load": "Encumbrance/Load",
@@ -196,12 +196,12 @@
 	"light-load": " Charge Légère ",
 	"medium-load": " Charge moyenne ",
 	"heavy-load": " Charge Lourde ",
-	"lift-over-head-a": " Lift Over ",
+	"lift-over-head-a": " Soulever ",
 	"lift-off-ground": " Porter ",
 	"push/drag": " Pousser / glisser ",
-	"or-less": "or less",
+	"or-less": "ou moins",
 	"weight-carried": " Poids porté ",
-	"character-size-a": " Char Size ",
+	"character-size-a": " Taille du perso ",
 	" data-i18n=": " Charge ",
 	"speed-30ft": " Vitesse (30 pieds)",
 	"speed-20ft": " Vitesse (20 pieds)",
