--- a/Starfinder by Roll20/translations/de.json
+++ b/Starfinder by Roll20/translations/de.json
@@ -536,5 +536,8 @@
 	"ref-saves": "Reflex Abwehr",
 	"fort-saves": "Zähigkeits Abwehr",
 	"will-saves": "Willen Abwehr",
-	"all-saves": "Alle Rettungswürfe"
+	"all-saves": "Alle Rettungswürfe",
+	"melee weapon attacks": "Melee Weapon Attacks",
+	"ranged weapon attacks": "Ranged Weapon Attacks",
+	"custom": "Custom"
 }
