--- a/Call_of_Cthulhu_7th_Ed/translations/ja.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/ja.json
@@ -66,10 +66,12 @@
 	"appraise-u": "Appraise(05%)",
 	"appraise-r-txt": "Appraise Roll",
 	"appraise_et-u": "Appraise(10%)",
+	"appraise_ic-u": "Appraise(15%)",
 	"archaeology-u": "Archaeology(01%)",
 	"archaeology-r-txt": "Archaeology Roll",
 	"charm-u": "Charm(15%)",
 	"charm-r-txt": "Charm Roll",
+	"civics-u": "Civics(10%)",
 	"climb-u": "Climb(20%)",
 	"climb-r-txt": "Climb Roll",
 	"status-u": "Status",
@@ -88,6 +90,7 @@
 	"elecrepair-u": "Elec Repair(10%)",
 	"elecrepair-r-txt": "Elec Repair Roll",
 	"elecrepair_ow-u": "Elec. Repair(00%)",
+	"empire-u": "Empire(25%)",
 	"fasttalk-u": "Fast Talk(05%)",
 	"fasttalk-r-txt": "Fast Talk Roll",
 	"fighting(brawl)-u": "Fighting(Brawl)(25%)",
@@ -103,6 +106,7 @@
 	"firearms_rs-r-txt": "Firearms(R/S) Roll",
 	"firearms_s_m_g-u": "Firearms(SMG)(15%)",
 	"firearms_other-u": "Firearms(Other)",
+	"firearms_electr-u": "Firearms(Electr.)(25%)",
 	"firstaid-u": "First Aid(30%)",
 	"firstaid-r-txt": "First Aid Roll",
 	"gambling-u": "Gambling(10%)",
@@ -187,13 +191,17 @@
 	"artillery-u": "Artillery(01%)",
 	"language(other)-u": "Language(Other)(01%)",
 	"computeruse-u": "Computer Use(05%)",
+	"computermaint_ic-u": "Computer Maint.(05%)",
 	"pilot-u": "Pilot(01%)",
 	"demolitions-u": "Demolitions(01%)",
+	"demolitions-txt": "Demolitions Roll",
 	"readlips-u": "Read Lips(01%)",
 	"electronics-u": "Electronics(01%)",
 	"science-u": "Science(01%)",
 	"fighting(varies)-u": "Fighting(Varies)",
 	"survival-u": "Survival(10%)",
+	"sysops-u": "SysOps(10%)",
+	"zerog_ic-u": "Zero-G(05%)",
 	"talents-u": "Talents",
 	"shield-z": "Shield",
 	"head-u": "Head",
@@ -219,6 +227,7 @@
 	"Firarms(SMG)": "Firarms(SMG)",
 	"Firarms(R/S)": "Firarms(R/S)",
 	"Fighting(Other)": "Fighting(Other)",
+	"Firarms(Electr.)": "Firarms(Electr.)",
 	"Throw": "Throw",
 	"Other Skill #1": "Other Skill #1",
 	"Other Skill #2": "Other Skill #2",
