--- a/Starfinder by Roll20/translations/cs.json
+++ b/Starfinder by Roll20/translations/cs.json
@@ -536,5 +536,8 @@
 	"ref-saves": "Reflex Saves",
 	"fort-saves": "Fortitude Saves",
 	"will-saves": "Will Saves",
-	"all-saves": "All Saves"
+	"all-saves": "All Saves",
+	"melee weapon attacks": "Melee Weapon Attacks",
+	"ranged weapon attacks": "Ranged Weapon Attacks",
+	"custom": "Custom"
 }
