--- a/Zweihänder Grim & Perilous/translations/fr.json
+++ b/Zweihänder Grim & Perilous/translations/fr.json
@@ -1,164 +1,164 @@
 {
-	"name": "Name",
-	"age": "Age",
-	"social-class": "Social Class",
-	"sex": "Sex",
-	"ancestry": "Ancestry",
+	"name": "Nom",
+	"age": "Âge",
+	"social-class": "Classe sociale",
+	"sex": "Sexe",
+	"ancestry": "Ancêtres",
 	"profession": "Profession",
-	"order-alignment": "Order Alignment",
-	"order-ranks": "Order Ranks",
+	"order-alignment": "Alignement d'ordre",
+	"order-ranks": "Rangs d'ordre",
 	"corruption": "Corruption",
-	"chaos-ranks": "Chaos Ranks",
-	"chaos-alignment": "Chaos Alignment",
-	"fate-points": "Fate Points",
-	"background": "Background",
-	"disorders": "Disorders",
-	"reputation-points": "Reputation Points",
+	"chaos-ranks": "Rangs de chaos",
+	"chaos-alignment": "Alignement du chaos",
+	"fate-points": "Points de destin",
+	"background": "Historique",
+	"disorders": "Folies",
+	"reputation-points": "Points de Réputation",
 	"difficulty-rating-chart": "Difficulty Rating Chart",
 	"trivial": "Trivial",
-	"easy": "Easy",
+	"easy": "Facile",
 	"routine": "Routine",
 	"standard": "Standard",
-	"challenging": "Challenging",
-	"hard": "Hard",
-	"arduous": "Arduous",
+	"challenging": "Délicat",
+	"hard": "Difficile",
+	"arduous": "Ardu",
 	"primary-attributes": "Focuses",
-	"skill-ranks": "Skill Ranks",
-	"tier": "Tier",
+	"skill-ranks": "Rangs de compétences",
+	"tier": "Niveau",
 	"combat": "Combat",
-	"special-skills-indicated-with-*": "Special Skills Indicated With *",
-	"peril-threshhold": "Peril Threshold",
-	"advance": "Advance",
+	"special-skills-indicated-with-*": "Compétences spéciales indiquées par *",
+	"peril-threshhold": "Seuil de Péril",
+	"advance": "Avancée",
 	"martial-melee*": "Martial Melee*",
 	"Martial Melee": "Martial Melee",
-	"will-bonus-u": "WB",
+	"will-bonus-u": "BV",
 	"martial-ranged*": "Martial Ranged*",
 	"Martial Ranged": "Martial Ranged",
-	"peril-threshold-u": "PT",
+	"peril-threshold-u": "SP",
 	"simple-melee": "Simple Melee",
 	"Simple Melee": "Simple Melee",
-	"peril-modifier": "Peril Modifier",
+	"peril-modifier": "Modificateur de Péril",
 	"simple-ranged": "Simple Ranged",
 	"Simple Ranged": "Simple Ranged",
 	"peril-condition-track": "Peril Condition Track",
-	"brawn": "Brawn",
-	"unhindered": "Unhindered",
-	"athletics": "Athletics",
-	"imperiled": "Imperiled",
-	"drive*": "Drive*",
-	"ignore-1-skill-rank": "Ignore 1 Skill Rank",
-	"intimidate": "Intimidate",
-	"ignore-2-skill-ranks": "Ignore 2 Skill Ranks",
-	"toughness": "Toughness",
-	"ignore-3-skill-ranks": "Ignore 3 Skill Ranks",
-	"agility": "Agility",
-	"incapacitated": "Incapacitated!",
+	"brawn": "Vigueur",
+	"unhindered": "Sans encombre",
+	"athletics": "Athlétisme",
+	"imperiled": "En péril",
+	"drive*": "Conduite*",
+	"ignore-1-skill-rank": "Ignorer 1 rang de compétence",
+	"intimidate": "Intimidation",
+	"ignore-2-skill-ranks": "Ignorer 2 rangs de compétence",
+	"toughness": "Endurance",
+	"ignore-3-skill-ranks": "Ignorer 3 rangs de compétence",
+	"agility": "Agilité",
+	"incapacitated": "Incapacité!",
 	"coordination": "Coordination",
 	"traits": "Traits",
-	"pilot*": "Pilot*",
-	"ride*": "Ride*",
-	"skulduggery*": "Skulduggery*",
-	"stealth": "Stealth",
+	"pilot*": "Pilotage*",
+	"ride*": "Équitation*",
+	"skulduggery*": "Magouilles*",
+	"stealth": "Furtivité",
 	"perception": "Perception",
-	"awareness": "Awareness",
+	"awareness": "Vigilance",
 	"eavesdrop": "Eavesdrop",
 	"scrutinize": "Scrutinize",
-	"survival": "Survival",
+	"survival": "Survie",
 	"intelligence": "Intelligence",
-	"alchemy*": "Alchemy*",
-	"counterfeit*": "Counterfeit*",
-	"education*": "Education*",
+	"alchemy*": "Alchimie*",
+	"counterfeit*": "Contrefaçon*",
+	"education*": "Éducation*",
 	"folklore": "Folklore",
-	"gamble": "Gamble",
-	"heal*": "Heal*",
+	"gamble": "Jeu",
+	"heal*": "Guérison*",
 	"navigation*": "Navigation*",
-	"warfare*": "Warfare*",
-	"willpower": "Willpower",
+	"warfare*": "Stratégie*",
+	"willpower": "Volonté",
 	"incantation*": "Incantation*",
 	"Incantation": "Incantation",
-	"interrogation*": "Interrogation*",
-	"resolve": "Resolve",
+	"interrogation*": "Interrogatoire*",
+	"resolve": "Résolution",
 	"tradecraft*": "Tradecraft*",
-	"fellowship": "Fellowship",
-	"bargain": "Bargain",
-	"charm": "Charm",
-	"disguise*": "Disguise*",
+	"fellowship": "Sociabilité",
+	"bargain": "Négociation",
+	"charm": "Charme",
+	"disguise*": "Déguisement*",
 	"guile": "Guile",
-	"handle-animal*": "Handle Animal*",
-	"leadership*": "Leadership*",
-	"rumor": "Rumor",
-	"encumbrance-limit": "Encumbrance Limit",
+	"handle-animal*": "Dressage*",
+	"leadership*": "Commandement*",
+	"rumor": "Rumeur",
+	"encumbrance-limit": "Limite d'encombrement",
 	"initiative": "Initiative",
-	"movement": "Movement",
-	"brawn-bonus-u": "BB",
-	"current": "Current",
+	"movement": "Mouvement",
+	"brawn-bonus-u": "BV",
+	"current": "Actuel",
 	"overage": "Overage",
-	"perception-bonus-u": "PB",
-	"agility-bonus-u": "AB",
-	"weapons-&-attacks": "Weapons &amp; Attacks",
-	"roll": "Roll",
-	"weapon": "Weapon",
-	"skill": "Skill",
-	"None": "None",
-	"load": "Load",
-	"handling": "Handling",
-	"short": "Short",
-	"medium": "Medium",
-	"long": "Long",
-	"qualities": "Qualities",
-	"encumbrance": "Encumbrance",
-	"damage-bonus": "Damage Bonus",
-	"damage": "Damage",
-	"damage-modifier": "Damage Modifier",
-	"details": "Details",
-	"armor": "Armor",
-	"shield": "Shield",
-	"armor-name": "Armor Name",
-	"damage-threshold-modifier-u": "DTM*",
-	"shield-name": "Shield Name",
-	"parry-modifier": "Parry Modifier",
+	"perception-bonus-u": "BP",
+	"agility-bonus-u": "BA",
+	"weapons-&-attacks": "Armes &amp; Attaques",
+	"roll": "Jet",
+	"weapon": "Arme",
+	"skill": "Compétence",
+	"None": "Aucun",
+	"load": "Chargement",
+	"handling": "Maniement",
+	"short": "Courte",
+	"medium": "Moyenne",
+	"long": "Longue",
+	"qualities": "Qualités",
+	"encumbrance": "Encombrement",
+	"damage-bonus": "Bonus de dégâts",
+	"damage": "Dégâts",
+	"damage-modifier": "Modificateur de Dégâts",
+	"details": "Détails",
+	"armor": "Armure",
+	"shield": "Bouclier",
+	"armor-name": "Nom de l'Armure",
+	"damage-threshold-modifier-u": "MSD*",
+	"shield-name": "Nom du Bouclier",
+	"parry-modifier": "Modificateur de Parade",
 	"talents": "Talents",
-	"trappings": "Trappings",
-	"defenses": "Defenses",
-	"show": "Show",
-	"talent-name": "Talent Name",
+	"trappings": "Possessions",
+	"defenses": "Défenses",
+	"show": "Afficher",
+	"talent-name": "Nom du talent",
 	"trapping-name": "Trapping Name",
-	"coinage": "Coinage",
-	"gold-crown": "Gold Crown",
-	"silver-shilling": "Silver Shilling",
-	"brass-penny": "Brass Penny",
-	"1-gold-crown-=-20-silver-shilling-or-240-brass-penny": "1 Gold Crown = 20 Silver Shilling or 240 Brass Penny",
-	"dodge": "Dodge",
-	"parry": "Parry",
-	"damage-threshold": "Damage Threshold",
-	"brawn-bonus-+-damage-threshold-modifier-u": "BB + DTM*",
-	"damage-threshold-+-6-u": "DT + 6",
-	"damage-threshold-+-12-u": "DT + 12",
-	"damage-threshold-+-18-u": "DT + 18",
-	"damage-threshold-modifier": "Damage Threshold Modifier",
+	"coinage": "Monnaie",
+	"gold-crown": "Couronne d’or",
+	"silver-shilling": "Pistole d'Argent",
+	"brass-penny": "Sou de cuivre",
+	"1-gold-crown-=-20-silver-shilling-or-240-brass-penny": "1 couronne d’or = 20 pistoles d’argent ou 240 sous de cuivre",
+	"dodge": "Esquive",
+	"parry": "Parade",
+	"damage-threshold": "Seuil de Dégâts",
+	"brawn-bonus-+-damage-threshold-modifier-u": "BV + MSD*",
+	"damage-threshold-+-6-u": "SD + 6",
+	"damage-threshold-+-12-u": "SD + 12",
+	"damage-threshold-+-18-u": "SD + 18",
+	"damage-threshold-modifier": "Modificateur de Seuil de Dégâts",
 	"damage-condition-track": "Damage Condition Track",
-	"unharmed": "Unharmed",
-	"lightly-wounded": "Lightly Wounded",
-	"moderately-wounded": "Moderately Wounded",
-	"seriously-wounded": "Seriously Wounded",
-	"grievously-wounded": "Grievously Wounded",
-	"slain!": "Slain!",
-	"injuries": "Injuries",
-	"intelligence-bonus": "Intelligence Bonus",
-	"willpower-bonus": "Willpower Bonus",
-	"incantation-skill": "Incantation Skill",
-	"magic-&-rituals": "Magic &amp; Rituals",
-	"cast": "Cast",
-	"spell-name": "Spell Name",
-	"spell-distance": "Spell Distance",
-	"spell-duration": "Spell Duration",
-	"spell-channel": "Spell Channel",
-	"spell-reagents": "Spell Reagents",
-	"spell-effect": "Spell Effect",
-	"critical-success": "Critical Success",
-	"critical-failure": "Critical Failure",
-	"current-reward-points": "Current Reward Points",
-	"total-reward-points": "Total Reward Points",
+	"unharmed": "Indemne",
+	"lightly-wounded": "Légèrement blessé",
+	"moderately-wounded": "Modérément blessé",
+	"seriously-wounded": "Sérieusement blessé",
+	"grievously-wounded": "Grièvement blessé",
+	"slain!": "Tué!",
+	"injuries": "Blessures",
+	"intelligence-bonus": "Bonus d'Intelligence",
+	"willpower-bonus": "Bonus de Volonté",
+	"incantation-skill": "Compétence d'incantation",
+	"magic-&-rituals": "Magie &amp; Rituels",
+	"cast": "Lancer",
+	"spell-name": "Nom du Sort",
+	"spell-distance": "Portée du sort",
+	"spell-duration": "Durée du sort",
+	"spell-channel": "Canal du sort",
+	"spell-reagents": "Composantes du sort",
+	"spell-effect": "Effets du sort",
+	"critical-success": "Réussite critique",
+	"critical-failure": "Échec critique",
+	"current-reward-points": "Points de Récompense actuels",
+	"total-reward-points": "Points de récompense totaux",
 	"basic-tier": "Basic Tier",
 	"trait": "Trait",
 	"bonus-advance": "Bonus Advance",
@@ -166,19 +166,19 @@
 	"intermediate-tier": "Intermediate Tier",
 	"advanced-tier": "Advanced Tier",
 	"unique-advances": "Unique Advances",
-	"roll20-wiki-link": "Roll20 Wiki Link",
+	"roll20-wiki-link": "Lien vers le Wiki Roll20",
 	"situational-modifier": "Situational Modifier",
 	"difficulty:": "Difficulty:$[[1]] ",
 	"modifier:": "Modifier:$[[3]] ",
 	"rating": "Rating",
 	"range:": "Range: 0 / 0 / 0 ",
-	"damage:": "Damage:$[[6]] ",
-	"CRITICAL-SUCCESS-u": "CRITICAL SUCCESS",
-	"chaos:": "Chaos:$[[4]] ",
-	"corruption:": "Corruption:$[[5]] ",
-	"distance:": "Distance: ",
-	"duration:": "Duration: ",
+	"damage:": "Dégâts : $[[6]] ",
+	"CRITICAL-SUCCESS-u": "RÉUSSITE CRITIQUE",
+	"chaos:": "Chaos : $[[4]] ",
+	"corruption:": "Corruption : $[[5]] ",
+	"distance:": "Distance : ",
+	"duration:": "Durée : ",
 	"MATCH-u": "MATCH",
 	"reagents:": "Reagents: ",
-	"CRITICAL-FAILURE-u": "CRITICAL FAILURE"
+	"CRITICAL-FAILURE-u": "ÉCHEC CRITIQUE"
 }
