--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -2,7 +2,7 @@
 	"name": "NOM",
 	"ability-type": "TYPE DE CARACTÉRISTIQUE",
 	"quantity": "QUANTITÉ",
-	"track": "ECHELLE",
+	"track": "ÉCHELLE",
 	"uses": "USAGES",
 	"spell-penetration": "Efficacité des sorts accrue",
 	"attack-affected-by-buffs-to": "JET D'ATTAQUE AFFECTÉ PAR UN BONUS POUR",
@@ -110,17 +110,16 @@
 	"gender": "GENRE",
 	"home-world": "MONDE NATAL",
 	"alignment": "ALIGNEMENT",
-	"deity": "DÉITÉ",
+	"deity": "DIVINITÉ",
 	"player": "JOUEUR",
 	"languages": "LANGAGES",
 	"class-name": "NOM DE CLASSE",
 	"class-num-level": "NIV",
-	"class-stam": "PE",
 	"bab": "BBA",
 	"fort": "VIG",
 	"ref": "RÉF",
 	"will": "VOL",
-	"skills": "COMP.",
+	"skills": "COMPÉTENCES",
 	"abi": "CAR.",
 	"spell": "SORT",
 	"poor": "FAIBLE",
@@ -137,9 +136,9 @@
 	"mods": "MODS",
 	"ability-scores": "VALEURS DES CARACTÉRISTIQUES",
 	"mod": "MOD",
-	"tot": "TOT",
+	"tot": "TOTAL",
 	"pen": "MALUS",
-	"drain": "DRN",
+	"drain": "DRAIN",
 	"strength": "FORCE",
 	"dexterity": "DEXTÉRITÉ",
 	"constitution": "CONSTITUTION",
@@ -155,10 +154,10 @@
 	"eac": "CAE",
 	"kac": "CAC",
 	"cmd": "CMO",
-	"dr-resist": "RD / RÉSISTANCE",
+	"dr-resist": "RÉSISTANCES",
 	"savingthrows": "JETS DE SAUVEGARDE",
 	"base": "BASE",
-	"rnk": "RNG",
+	"rnk": "RANG",
 	"class-skill": "CC",
 	"acrobatics": "ACROBATIES",
 	"acp": "Pénalité d'armure",
@@ -188,13 +187,13 @@
 	"category": "CATEGORIE",
 	"atk-u": "JET D'ATTAQUE",
 	"rng": "PORTÉE",
-	"melee": "MELÉE",
+	"melee": "CaC",
 	"ranged": "À DISTANCE",
 	"dmg": "DÉGÂTS",
 	"type": "TYPE",
 	"damage-type": "TYPE DE DÉGÂTS",
 	"crit-damage": "CRITIQUE",
-	"ammo": "munitions",
+	"ammo": "Munitions",
 	"usage": "UTILISATION",
 	"special": "SPÉCIAL",
 	"additional-attack": "ATTAQUE ADDITIONNELLE",
@@ -209,7 +208,7 @@
 	"not carried": "NON TRANSPORTÉ",
 	"equipped": "EQUIPÉ",
 	"encumber": "ENCOMBRÉ",
-	"over": "SURPOIDS",
+	"over": "SURCHARGE",
 	"credits": "CRÉDITS",
 	"wealth": "RICHESSE",
 	"upbs": "BPUs",
@@ -235,26 +234,26 @@
 	"wis": "SAG",
 	"cha": "CHA",
 	"based-dc_": "DD de base ",
-	"fort-save": "JET DE VIGUEUR",
-	"ref-save": "JET DE RÉFLEXE",
-	"will-save": "JET DE VOLONTÉ",
-	"A-Sucessful-Save:": "Un jet réussi:",
+	"fort-save": "VIGUEUR",
+	"ref-save": "RÉFLEXE",
+	"will-save": "VOLONTÉ",
+	"A-Sucessful-Save:": "Jet réussi :",
 	"spellclasses": "LANCEURS DE SORTS",
 	"ability": "CARAC.",
 	"progress": "PROGRESSION",
 	"spells-per-day": "SORTS PAR JOUR",
-	"1st-level": "1er NIVEAU",
+	"1st-level": "NIVEAU 1",
 	"school": "ÉCOLE",
 	"str": "FOR",
-	"4th-level": "4ème NIVEAU",
-	"7th-level": "7ème NIVEAU",
-	"2nd-level": "2ème NIVEAU",
-	"5th-level": "5ème NIVEAU",
-	"8th-level": "8ème NIVEAU",
-	"cantrips": "SORTS MAGIQUES",
-	"3rd-level": "3ème NIVEAU",
-	"6th-level": "6ème NIVEAU",
-	"9th-level": "9ème NIVEAU",
+	"4th-level": "NIVEAU 4",
+	"7th-level": "NIVEAU 7",
+	"2nd-level": "NIVEAU 2",
+	"5th-level": "NIVEAU 5",
+	"8th-level": "NIVEAU 8",
+	"cantrips": "NIVEAU 0",
+	"3rd-level": "NIVEAU 3",
+	"6th-level": "NIVEAU 6",
+	"9th-level": "NIVEAU 9",
 	"cr": "FP",
 	"xp": "PX",
 	"init": "INIT",
@@ -417,19 +416,19 @@
 	"light-armor": "ARMURE LÉGÈRE",
 	"heavy-armor": "ARMURE LOURDE",
 	"power-armor": "ARMURE ALIMENTÉE",
-	"basic-melee": "MELÉE SIMPLE",
-	"advanced-melee": "MELÉE AVANCÉE",
+	"basic-melee": "ARMES CaC SIMPLES",
+	"advanced-melee": "ARMES CaC ÉVOLUÉES",
 	"small-arms": "ARMES LÉGÈRES",
 	"longarms": "ARMES LONGUES",
 	"heavy-weapons": "ARMES LOURDES",
 	"grenades": "GRENADES",
-	"snipers": "PRÉCISION",
-	"basic_melee": "MELÉE SIMPLE",
-	"advanced_melee": "MELÉE AVANCÉE",
+	"snipers": "ARMES DE PRÉCISION",
+	"basic_melee": "ARME CaC SIMPLE",
+	"advanced_melee": "ARME CaC ÉVOLUÉE",
 	"small_arm": "ARME LÉGÈRE",
 	"longarm": "ARME LONGUE",
 	"grenade": "GRENADE",
-	"sniper": "PRÉCISION",
+	"sniper": "ARME DE PRÉCISION",
 	"conditions": "CONDITIONS",
 	"combat-proficiencies": "COMPÉTENCES D'ARME ET ARMURE",
 	"armor": "ARMURE",
@@ -487,57 +486,57 @@
 	"mod wizard instructions": "This wizard will help you add bonuses and penalties to the selected buff, ability, or piece of equipment to affect your character's stats. Simply add a new row by clicking the '+' sign. Once you've added all the bonuses, click 'Add Mods'. Effects of the mods will not show on your sheet until you finish the wizard.",
 	"mod wizard title": "Will add the mods to your sheet and will clear and hide this dialog",
 	"add wizard mods": "Add Mods",
-	"Attribute affected by the mod": "Affected attribute",
-	"choose attribute": "Choose Attribute",
-	"weapon attacks": "Weapon Attacks",
-	"spell attacks": "Spell Attacks",
-	"ability attacks": "Ability Attacks",
-	"weapon damage": "Weapon Damage",
-	"spell damage": "Spell Damage",
-	"ability damage": "Ability Damage",
-	"ability dc": "Ability DC",
-	"spell dc": "Spell DC",
-	"custom attribute": "Custom Attribute",
+	"Attribute affected by the mod": "Attribut affecté",
+	"choose attribute": "Sélectionnez un Attribut",
+	"weapon attacks": "Attaque : Armes",
+	"spell attacks": "Attaque : Sorts",
+	"ability attacks": "Attaque : Caractéristiques",
+	"weapon damage": "Dégâts : Armes",
+	"spell damage": "Dégâts : Sorts",
+	"ability damage": "Dégâts : Caractéristiques",
+	"ability dc": "DD : Caractéristiques",
+	"spell dc": "DD : Sorts",
+	"custom attribute": "Attribut personalisé",
 	"custom mod": "Custom Mod",
 	"mod method": "Mod Input Method",
 	"manual": "Manual",
 	"wizard": "Wizard",
 	"skill points": "Skill Points",
 	"profession": "Profession",
-	"untyped bonus": "Untyped Bonus",
-	"armor bonus": "Armor Bonus",
-	"circumstance bonus": "Circumstance Bonus",
-	"divine bonus": "Divine Bonus",
-	"enhancement bonus": "Enhancement Bonus",
-	"insight bonus": "Insight Bonus",
-	"luck bonus": "Luck Bonus",
-	"morale bonus": "Morale Bonus",
-	"racial bonus": "Racial Bonus",
-	"custom bonus": "Custom Bonus",
-	"encumber bulk": "Encumber Bulk",
-	"overburden bulk": "Overburden Bulk",
-	"mod value": "Value",
-	"bonus type": "Bonus Type",
-	"add mods": "Add Mods",
-	"maximum dexterity": "Maximum Dexterity",
-	"armor check penalty": "Armor Check Penalty",
-	"select template": "Select a Template",
-	"armor template": "Armor Template",
-	"global attack template": "Global Attack Template",
-	"global damage template": "Global Damage Template",
-	"weapon template": "Weapon Template",
-	"global dc template": "Global DC Template",
-	"spell template": "Spell Template",
-	"ability template": "Ability Template",
+	"untyped bonus": "Bonus sans Type",
+	"armor bonus": "Bonus d'Armure",
+	"circumstance bonus": "Bonus de Circonstances",
+	"divine bonus": "Bonus Divin",
+	"enhancement bonus": "Bonus d'Altération",
+	"insight bonus": "Bonus d'Intuition",
+	"luck bonus": "Bonus de Chance",
+	"morale bonus": "Bonus de Moral",
+	"racial bonus": "Bonus Racial",
+	"custom bonus": "Autres Bonus",
+	"encumber bulk": "Encombré",
+	"overburden bulk": "Surchargé",
+	"mod value": "Valeur",
+	"bonus type": "Type de Bonus",
+	"add mods": "Valider",
+	"maximum dexterity": "Dextérité Maximale",
+	"armor check penalty": "Pénalité d'Armure aux Tests",
+	"select template": "Sélectionnez un Template",
+	"armor template": "Template : Armure",
+	"global attack template": "Template : Attaque",
+	"global damage template": "Template : Dégâts",
+	"weapon template": "Template : Armes",
+	"global dc template": "Template : DD",
+	"spell template": "Template : Sorts",
+	"ability template": "Template : Caractéristiques",
 	"mod templates": "Use a preset buff template:",
-	"backpack template": "Backpack Template",
+	"backpack template": "Template : Transport",
 	"wizard-buffs-help-first-line": "The textareas in this repeating section display buffs & penalties that are part of each item. Click on the textarea to open the wizard. You can also switch to the manual method on the settings page.",
 	"wizard-mods-help-first-line": "This textarea displays buffs & penalties that are part of each item. Click on the textarea to open the wizard. You can also switch to the manual method on the settings page.",
-	"ref-saves": "Reflex Saves",
-	"fort-saves": "Fortitude Saves",
-	"will-saves": "Will Saves",
-	"all-saves": "All Saves",
-	"melee weapon attacks": "Melee Weapon Attacks",
-	"ranged weapon attacks": "Ranged Weapon Attacks",
+	"ref-saves": "Svg : Réflexes",
+	"fort-saves": "Svg : Vigueur",
+	"will-saves": "Svg : Volonté",
+	"all-saves": "Toutes les Sauvegardes",
+	"melee weapon attacks": "Attaque d'armes de mêlée",
+	"ranged weapon attacks": "Attaque d'armes à distance",
 	"custom": "Custom"
 }
