--- a/Starfinder by Roll20/translations/zh.json
+++ b/Starfinder by Roll20/translations/zh.json
@@ -78,7 +78,7 @@
 	"helpless": "無助",
 	"nauseated": "反胃",
 	"negative_levels": "負向等級",
-	"off_kilter": "失衡（",
+	"off_kilter": "失衡",
 	"off_target": "失準",
 	"overburdened": "超載",
 	"panicked": "恐慌",
@@ -125,15 +125,15 @@
 	"spell": "法術",
 	"poor": "弱",
 	"good": "強",
-	"menus": "MENUS",
+	"menus": "列表",
 	"initiative": "先攻",
 	"attacks": "攻擊",
 	"attack": "攻擊",
 	"damage": "傷害",
 	"saves": "豁免",
 	"abilities-u": "能力",
-	"ability-checks": "ABILITY CHECKS",
-	"buffs": "BUFFS",
+	"ability-checks": "屬性檢定",
+	"buffs": "增益狀態",
 	"mods": "MODS",
 	"ability-scores": "屬性值",
 	"mod": "MOD",
@@ -171,9 +171,9 @@
 	"engineering": "工程學",
 	"intimidate": "威嚇",
 	"life-science": "生命科學",
-	"medicine": "醫學 ",
-	"mysticism": "MYSTICISM ",
-	"perception": "察覺 ",
+	"medicine": "醫學",
+	"mysticism": "神秘學",
+	"perception": "觀察",
 	"physical-science": "物理科學",
 	"piloting": "駕駛",
 	"sense-motive": "察言觀色",
@@ -182,8 +182,8 @@
 	"survival": "生存",
 	"name-u": "名稱",
 	"lvl": "等級",
-	"Not-Proficient": "不擅長",
-	"proficient": "擅長",
+	"Not-Proficient": "不熟練",
+	"proficient": "熟練",
 	"specialized": "專精",
 	"category": "分類",
 	"atk-u": "攻擊檢定",
@@ -193,7 +193,7 @@
 	"dmg": "傷害骰",
 	"type": "類型",
 	"damage-type": "傷害類型",
-	"crit-damage": "重擊傷害",
+	"crit-damage": "爆擊傷害",
 	"ammo": "彈藥",
 	"usage": "USAGE",
 	"special": "特殊",
@@ -211,7 +211,7 @@
 	"encumber": "重載",
 	"over": "上限",
 	"credits": "信用點",
-	"wealth": "WEALTH",
+	"wealth": "財富",
 	"upbs": "UPBs",
 	"num": "數量",
 	"bulk": "負載",
@@ -234,7 +234,7 @@
 	"int": "智力",
 	"wis": "感知",
 	"cha": "魅力",
-	"based-dc_": "基本DC ",
+	"based-dc_": "基礎 DC",
 	"fort-save": "強韌豁免",
 	"ref-save": "反射豁免",
 	"will-save": "意志豁免",
@@ -264,7 +264,7 @@
 	"dr": "DR",
 	"immunities": "免疫",
 	"sr": "SR",
-	"resistances": "抗力",
+	"resistances": "抗性",
 	"weaknesses": "弱點",
 	"offense": "攻擊",
 	"space": "佔據",
@@ -285,17 +285,17 @@
 	"export": "EXPORT",
 	"paizo-statblock": "PAIZO STATBLOCK",
 	"srd-statblock": "SRD STATBLOCK",
-	"starship-info": "STARSHIP INFO",
-	"starship-name": "STARSHIP NAME",
+	"starship-info": "星船詳情",
+	"starship-name": "星船名稱",
 	"tier": "TIER",
 	"make-and-model": "MAKE AND MODEL",
 	"frame": "FRAME",
 	"maneuverability": "MANEUVERABILITY",
 	"drift-rating": "DRIFT RATING",
 	"crew": "CREW",
-	"captain": "CAPTAIN",
-	"engineer": "ENGINEER",
-	"pilot": "PILOT",
+	"captain": "艦長",
+	"engineer": "工程師",
+	"pilot": "駕駛",
 	"gunner": "GUNNER",
 	"gunnery": "GUNNERY",
 	"science-officer": "SCIENCE OFFICER ",
@@ -380,7 +380,7 @@
 	"fine": "FINE",
 	"diminutive": "DIMINUTIVE",
 	"long": "LONG",
-	"crit-effect": "重擊效果",
+	"crit-effect": "爆擊效果",
 	"ability_checks": "屬性檢定",
 	"ability_scores": "屬性值",
 	"crb-equipment": "CRB EQUIPMENT",
@@ -403,7 +403,7 @@
 	"shield-bonus": "SHIELD BONUS",
 	"shields": "SHIELDS",
 	"activation": "ACTIVATION",
-	"tiny": "超小型",
+	"tiny": "微型",
 	"small": "小型",
 	"large": "大型",
 	"huge": "超大型",
@@ -413,7 +413,7 @@
 	"average": "AVERAGE",
 	"perfect": "PERFECT",
 	"n/a": "N/A",
-	"disclaimer": "© 2018. Starfinder, the Starfinder logo, the Paizo golem, all Paizo titles, the Starfinder Roleplaying Game rules, and Paizo’s character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries. 正體中文翻譯:白貓(僅使用已有的譯名進行翻譯，剩下就是涼透了沒人要翻譯)",
+	"disclaimer": "© 2018. Starfinder, the Starfinder logo, the Paizo golem, all Paizo titles, the Starfinder Roleplaying Game rules, and Paizo’s character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries. 正體中文翻譯:白貓、薩斯",
 	"light-armor": "輕甲",
 	"heavy-armor": "重甲",
 	"power-armor": "動力裝甲",
