--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -402,12 +402,12 @@
 	"shield-bonus": "BONUS DE BOUCLIER",
 	"shields": "BOUCLIERS",
 	"activation": "ACTIVATION",
-	"tiny": "TRÈS PETIT",
-	"small": "PETIT",
-	"large": "GRAND",
-	"huge": "TRÈS GRAND",
+	"tiny": "TRÈS PETITE",
+	"small": "PETITE",
+	"large": "GRANDE",
+	"huge": "TRÈS GRANDE",
 	"gargantuan": "GIGANTESQUE",
-	"colossal": "COLOSSAL",
+	"colossal": "COLOSSALLE",
 	"clumsy": "DÉPLORABLE",
 	"average": "MOYENNE",
 	"perfect": "PARFAITE",
