uc-476: Chronicles of Darkenss by Roll20: Fix three skills that was unselectable by diceroller + minor translation change

--- a/Chronicles of Darkness by Roll20/translations/fr.json
+++ b/Chronicles of Darkness by Roll20/translations/fr.json
@@ -130,7 +130,7 @@
     "survival": "Survie",
     "weaponry": "Armes blanches",
     "social": "Social",
-    "animal-ken": "Animaux",
+    "animalken": "Animaux",
     "empathy": "Empathie",
     "expression": "Expression",
     "intimidation": "Intimidation",
@@ -163,8 +163,8 @@
     "protean": "Protéisme",
     "resilience": "Résilience",
     "vigor": "Puissance",
-    "cruac": "Cruac",
-    "theban-sorcery": "Sorcell. Thébaine",
+    "crúac": "Cruac",
+    "thebansorcery": "Sorcell. Thébaine",
     "death": "Mort",
     "fate": "Destin",
     "forces": "Energies",
@@ -184,7 +184,7 @@
     "strength-short": "For",
     "size-short": "Tai",
     "melee": "Mêlée",
-    "gun": "Arc",
+    "gun": "Armes à feu",
     "thrown": "Lancé",
     "brawl-fight-finesse": "Bagarre* (Finesse de combat)",
     "melee-fight-finesse": "Mêlée* (Finesse de combat)",
