--- a/Starfinder by Roll20/translations/zh.json
+++ b/Starfinder by Roll20/translations/zh.json
@@ -38,23 +38,19 @@
 	"debilitated": "DEBILITATED",
 	"bedridden": "BEDRIDDEN",
 	"comatose": "COMATOSE",
-	"dead": "死亡",
 	"mental-disease": "MENTAL DISEASE",
 	"befuddled": "BEFUDDLED",
 	"disassociated": "DISASSOCIATED",
 	"strength-poison": "STRENGTH POISON",
 	"healthy' selected='selected": "HEALTHY",
-	"staggered": "恍惚",
 	"immobile": "IMMOBILE",
 	"dexterity-poison": "DEXTERITY POISON",
 	"sluggish": "SLUGGISH",
 	"stiffened": "STIFFENED",
 	"constitution-poison": "CONSTITUTION POISON",
-	"unconscious": "昏迷",
 	"intelligence-poison": "INTELLIGENCE POISON",
 	"animalistic": "ANIMALISTIC",
 	"wisdom-poison": "WISDOM POISON",
-	"confused": "困惑",
 	"charisma-poison": "CHARISMA POISON",
 	"pliable": "PLIABLE",
 	"catatonic": "CATATONIC",
@@ -62,9 +58,11 @@
 	"bleeding": "流血",
 	"blinded": "目盲",
 	"burning": "燃燒",
+	"confused": "困惑",
 	"cowering": "畏縮",
 	"dazed": "暈眩",
 	"dazzled": "目眩",
+	"dead": "死亡",	
 	"deafened": "耳聾",
 	"dying": "瀕死",
 	"encumbered": "重載",
@@ -89,6 +87,8 @@
 	"sickened": "噁心",
 	"stable": "穩定",
 	"stunned": "震懾",
+	"staggered": "恍惚",
+	"unconscious": "昏迷",
 	"npc": "NPC",
 	"ship": "飛船",
 	"drone": "無人機",
@@ -173,7 +173,7 @@
 	"life-science": "生命科學",
 	"medicine": "醫學",
 	"mysticism": "神秘學",
-	"perception": "觀察",
+	"perception": "察覺",
 	"physical-science": "物理科學",
 	"piloting": "駕駛",
 	"sense-motive": "察言觀色",
