--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -339,10 +339,10 @@
 	"weapons-array-dice-range": "ZONES DES ARMES (31-60)",
 	"engines-dice-range": "MOTEURS (61-80)",
 	"power-core-dice-range": "NOYAU D'ALIMENTATION (81-100)",
-	"fwd (1)": "AVT (1)",
+	"fwd (1)": "PRO (1)",
 	"stbd (2)": "TRI (2)",
 	"port (4)": "BAB (4)",
-	"aft (3)": "ARR (3)",
+	"aft (3)": "POU (3)",
 	"1st-attack": "1ère ATTAQUE",
 	"targets": "CIBLES",
 	"full-effect:": "PLEIN EFFET:",
