--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -389,8 +389,8 @@
 	"which-gunner": "Quel Cannonier",
 	"range": "PORTÉE",
 	"hexes": "HEXAGONES",
-	"light": "LÉGER",
-	"heavy": "ARME LOURDE",
+	"light": "LÉGERE",
+	"heavy": "LOURDE",
 	"capital": "CAPITALE",
 	"direct-fire": "TIR DIRECT",
 	"tracking": "TRACTEUR",
