--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -321,11 +321,11 @@
 	"cargo/passengers": "CARGO/PASSAGERS",
 	"cargo-placeholder": "Entrer tout cargo/passagers transportés ici",
 	"system-status": "STATUT DES SYSTÈMES",
-	"life-support-dice-range": "SUPPORT VITAL (1-10)",
-	"life-support": "Support Vital",
-	"sensors": "Capteurs",
-	"engines": "Moteurs",
-	"power-core": "Noyau d'alimentation",
+	"life-support-dice-range": "SYSTÈMES DE SURVIE (1-10)",
+	"life-support": "Système de survie",
+	"sensors": "Détecteurs",
+	"engines": "Propulseurs",
+	"power-core": "Réacteur",
 	"port-arc": "Arc Babord",
 	"starboard-arc": "Arc de Poupe",
 	"forward-arc": "Arc de Proue",
@@ -335,10 +335,10 @@
 	"glitching": "DYSFONCTIONNEMENT",
 	"malfunctioning": "DÉFAILLANT",
 	"wrecked": "DÉTRUIT",
-	"sensors-dice-range": "CAPTEURS (11-30)",
+	"sensors-dice-range": "DÉTECTEURS (11-30)",
 	"weapons-array-dice-range": "ZONES DES ARMES (31-60)",
-	"engines-dice-range": "MOTEURS (61-80)",
-	"power-core-dice-range": "NOYAU D'ALIMENTATION (81-100)",
+	"engines-dice-range": "PROPULSEURS (61-80)",
+	"power-core-dice-range": "RÉACTEUR (81-100)",
 	"fwd (1)": "PRO (1)",
 	"stbd (2)": "TRI (2)",
 	"port (4)": "BAB (4)",
