--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -317,7 +317,7 @@
 	"starboard": "POUPE",
 	"turret": "TOURELLE",
 	"systems": "SYSTÈMES",
-	"expansion-bays": "BAIES D'EXTENTION",
+	"expansion-bays": "COMPARTIMENTS ANNEXES",
 	"cargo/passengers": "CARGO/PASSAGERS",
 	"cargo-placeholder": "Entrer tout cargo/passagers transportés ici",
 	"system-status": "STATUT DES SYSTÈMES",
