--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -393,7 +393,7 @@
 	"heavy": "LOURDE",
 	"capital": "CAPITALE",
 	"direct-fire": "TIR DIRECT",
-	"tracking": "TRACTEUR",
+	"tracking": "AUTONOME",
 	"which-arc": "Quel Arc",
 	"power&computers": "ALIMENTATION & ORDINATEURS",
 	"computer": "ORDINATEUR",
